--- a/index.html
+++ b/index.html
@@ -8,37 +8,34 @@
 </head>
 <body>
 
-    <!-- Navbar -->
     <header class="navigation">
         <div class="inline-block logo">
-            <img src="../HW17COPY/images/Logo Blue Rounded.png" alt="Your Logo">
-        </div
+            <img src="../UX_UI_HW_17/images/Logo Blue Rounded.png" alt="Your Logo">
+        </div>
         <nav class="inline-block">
             <ul>
-                <li class="inline-block">about</li>
-                <li class="inline-block">skills</li>
-                <li class="inline-block">work</li>
-                <li class="inline-block">contact</li>
+                <li class="inline-block">About</li>
+                <li class="inline-block">Skills</li>
+                <li class="inline-block">Work</li>
+                <li class="inline-block">Contact</li>
             </ul>
         </nav>
     </header>
 
-    <!-- Hero Image -->
-    <section class="heroImg" style="background-image: url(../HW17COPY/images/Background\ Drip.jpg);">
+    <section class="heroImg" style="background-image: url(../UX_UI_HW_17/images/Background\ Drip.jpg);">
         <div class="content">
-            <img src="../HW17COPY/images/Headshot.jpg" alt="Your Picture">
+            <img src="../UX_UI_HW_17/images/Headshot.jpg" alt="Your Picture">
             <p>I bring unique perspectives of human behavior and empirical research methodologies to interaction design.</p>
             <button>Download Resume</button>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <ul>
-            <li class="inline-block">about</li>
-            <li class="inline-block">skills</li>
-            <li class="inline-block">work</li>
-            <li class="inline-block">contact</li>
+            <li class="inline-block">About</li>
+            <li class="inline-block">Skills</li>
+            <li class="inline-block">Work</li>
+            <li class="inline-block">Contact</li>
         </ul>
     </footer>
 </body>
